--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/web-link": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
+        "tetranz/select2entity-bundle": "^3.0",
         "twig/twig": "^2.0"
     },
     "require-dev": {
