working on appointments

--- a/.env
+++ b/.env
@@ -43,3 +43,6 @@ DATABASE_URL=mysql://root:root1234@127.0.0.1:3306/yaya?serverVersion=5.7
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://digibinks@gmail.com:d1g1b!nks@localhost
 ###< symfony/swiftmailer-bundle ###
+
+STRIPE_PUBLIC_KEY=pk_test_BOdSnTRUmFd9lpeJ9yGmpkVh
+STRIPE_SECRET_KEY=sk_test_5TA6ChJTqt9yw9THW75V1oFl
