--- a/.env
+++ b/.env
@@ -46,3 +46,7 @@ MAILER_URL=gmail://digibinks@gmail.com:d1g1b!nks@localhost
 
 STRIPE_PUBLIC_KEY=pk_test_BOdSnTRUmFd9lpeJ9yGmpkVh
 STRIPE_SECRET_KEY=sk_test_5TA6ChJTqt9yw9THW75V1oFl
+
+TWILIO_SID=AC5f68e0664000f18931b56f568dc7ab04
+TWILIO_TOKEN=b974697847ff8f0edc3c130d23e42fe2
+TWILIO_NUMBER='+33 6 58 08 01 90'
