--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "friendsofsymfony/user-bundle": "~2.0",
         "misd/phone-number-bundle": "^1.3",
         "sensio/framework-extra-bundle": "^5.1",
+        "stripe/stripe-php": "^7.37",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -31,7 +32,8 @@
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
         "tetranz/select2entity-bundle": "^3.0",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "twilio/sdk": "^6.7"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
