--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,4 +4,4 @@ twig:
     strict_variables: '%kernel.debug%'
     exception_controller: null
     form_themes:
-        - '@TetranzSelect2Entity/Form/fields.html.twig'
+        #- '@TetranzSelect2Entity/Form/fields.html.twig'
