--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.28.2",
-        "core-js": "^3.0.0",
-        "regenerator-runtime": "^0.13.2",
+        "@symfony/webpack-encore": "^0.30.2",
+        "core-js": "^3.6.5",
+        "regenerator-runtime": "^0.13.7",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "copy-webpack-plugin": "^5.1.1",
-        "jquery": "^3.4.1",
+        "intl-tel-input": "^17.0.3",
+        "jquery": "^3.5.1",
         "popper.js": "^1.16.1"
     }
 }
