--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/yaml": "4.4.*",
         "twig/twig": "^2.0",
         "twilio/sdk": "^6.7",
-        "ext-intl": "*"
+        "ext-intl": "*",
+      "ext-json": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
